--- a/UE8/app/src/main/res/xml/activity_task2_scene.xml
+++ b/UE8/app/src/main/res/xml/activity_task2_scene.xml
@@ -1,47 +1,67 @@
-<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<MotionScene
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetStart="@+id/start"
         motion:constraintSetEnd="@+id/end"
-        motion:duration="300">
-
-        <OnClick
-            motion:targetId="@id/button"
-            motion:clickAction="toggle"
-            />
-
+        motion:constraintSetStart="@id/start"
+        motion:duration="1000">
+        <KeyFrameSet>
+        </KeyFrameSet>
+        <OnClick motion:clickAction="toggle"
+            motion:targetId="@id/button" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/button"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="8dp"
-
+            motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"/>
-
-        <Constraint android:id="@id/textView"
-            android:visibility="invisible"/>
+            motion:layout_constraintTop_toTopOf="parent" >
+            <CustomAttribute
+                motion:attributeName="text"
+                motion:customStringValue="SHOW" />
+        </Constraint>
+        <Constraint
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:id="@+id/button"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toBottomOf="parent"
-            motion:layout_constraintStart_toEndOf="parent" />
+            motion:layout_constraintStart_toStartOf="parent">
 
-        <Constraint android:id="@id/textView"
-            android:visibility="visible"/>
+            <CustomAttribute
+                motion:attributeName="text"
+                motion:customStringValue="HIDE" />
+
+        </Constraint>
+        <Constraint
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
     </ConstraintSet>
+    <Transition
+        motion:constraintSetStart="@+id/end"
+        motion:constraintSetEnd="@+id/start">
 
+        <OnClick motion:clickAction="toggle"
+            motion:targetId="@id/button" />
+    </Transition>
 </MotionScene>
